--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <div class="home__data">
                     <h1 class="home__title">Mansura Habiba, Ph.D.</h1>
-                    <h3 class="home__subtitle">Principal Platform Archietct for AI and HPC Platforms</h3>
+                    <h3 class="home__subtitle">Principal Platform Architect for AI and HPC Platforms</h3>
                     <p class="home__description">
                        Mansura specializes in high-performance computing (HPC) and AI platform architecture, development, and research, focusing on optimizing performance, scalability, and innovation through cutting-edge deep learning techniques.</p>
 
