Update job titles and responsibilities in timeline

--- a/index.html
+++ b/index.html
@@ -341,8 +341,26 @@
             <div class="timeline">
                 <!-- Principal Platform Engineer Entry -->
                 <div class="timeline-entry">
-                    <div class="job-title">Principal Platform Engineer for AI and HPC Platforms - IBM</div>
-                    <div class="job-duration">06/2022 – Present</div>
+                    <div class="job-title">Principal Architect for Agentic Cross Product SaaS Platforms - IBM Software</div>
+                    <div class="job-duration">04/2025 – Present</div>
+                    <details class="responsibilities">
+                        <summary>Key Responsibilities</summary>
+                        <ul>
+                        <li class="responsibility-item">Implemented an agentic orchestration layer to enable cross-product workflows across IBM enterprise SaaS offerings.</li>
+                        <li class="responsibility-item">Implemented tool-calling using MCP/A2A protocols integrations (API wrappers, schemas, input validation) with guardrails to prevent unsafe/invalid actions.</li>
+                        <li class="responsibility-item">Designed failure handling for long-running agent flows (timeouts, retries, partial completion, idempotency, and rollback strategies).</li>
+                        <li class="responsibility-item">Integrated authentication + authorization (permissions-aware tool execution) to support secure multi-tenant enterprise use cases.</li>
+                        <div class="responsibility-item">Shipped production observability for agent runs (structured logs, traces, metrics, and error categorization) to support debugging and reliability.</div>
+                        <div class="responsibility-item">Led a delivery team to productionize the platform and accelerate new integrations through a reusable framework and shared patterns.</div>
+                       <div class="responsibility-item">Led technical discussion and demo with client </div>
+                            
+                          </ul>  
+                    </details>
+                </div>
+                <!-- Principal Platform Engineer Entry -->
+                <div class="timeline-entry">
+                    <div class="job-title">Principal Platform Architect for AI and HPC Platforms - IBM</div>
+                    <div class="job-duration">06/2022 – 03/2025</div>
                     <details class="responsibilities">
                         <summary>Key Responsibilities</summary>
                         <ul>
@@ -671,6 +689,26 @@
                         <div data-testid="Typography" class="issuer-name"><a href="https://partnerships.packt.com/edit-post-6/" target="_blank">Interview with Author</a></div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div role="button" data-testid="Card" class="card p-3" tabindex="0">
+                        <div class="badge-image-container">
+                            <img src="https://d2sofvawe08yqg.cloudfront.net/emergence-agentic-ai/s_hero?1746930297&1746930297" alt="Emergence of Agentic AI">
+                        </div>
+                        <div data-testid="Typography" class="organization-name">Emergence of Agentic AI</div>
+                        <div data-testid="Typography" class="issuer-name">Leanpub, 2025</div>
+                        <div data-testid="Typography" class="issuer-name"><a href="https://leanpub.com/emergence-agentic-ai" target="_blank">Details</a></div>
+                    </div>
+                </div>
+               <div class="col-lg-4 col-md-6 mb-4">
+                    <div role="button" data-testid="Card" class="card p-3" tabindex="0">
+                        <div class="badge-image-container">
+                            <img src="https://media.springernature.com/w158/springer-static/cover/book/978-3-032-18021-6.jpg" alt="Recent Trends in Modelling the Continuous Time Series using Deep Learning">
+                        </div>
+                        <div data-testid="Typography" class="organization-name">Recent Trends in Modelling the Continuous Time Series using Deep Learning</div>
+                        <div data-testid="Typography" class="issuer-name">Springer, 2026</div>
+                        <div data-testid="Typography" class="issuer-name"><a href="https://link.springer.com/book/9783032180216" target="_blank">Details</a></div>
+                    </div>
+                </div>  
             </div>
         </div>
     <h2 class="section__title text-center mb-4">Patents</h2>
