Update organization name in index.html

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                         <div class="badge-image-container">
                             <img src="https://d2sofvawe08yqg.cloudfront.net/emergence-agentic-ai/s_hero?1746930297&1746930297" alt="Emergence of Agentic AI">
                         </div>
-                        <div data-testid="Typography" class="organization-name">Emergence of Agentic AI</div>
+                        <div data-testid="Typography" class="organization-name">Emergence of Agentic AI, Architecting the Next Generation of Intelligent Systems</div>
                         <div data-testid="Typography" class="issuer-name">Leanpub, 2025</div>
                         <div data-testid="Typography" class="issuer-name"><a href="https://leanpub.com/emergence-agentic-ai" target="_blank">Details</a></div>
                     </div>
