Update experience and publication counts in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <div>
-                <span class="about__info-title">1</span>
+                <span class="about__info-title">3</span>
                 <span class="about__info-name">Book <br> Completed</span>
             </div>
 
@@ -124,7 +124,7 @@
             </div>
 
             <div>
-                <span class="about__info-title">6</span>
+                <span class="about__info-title">6+</span>
                 <span class="about__info-name">Patents <br> Published</span>
             </div>
         </div>
